<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/small"
    android:layout_marginTop="@dimen/small"
    android:layout_marginEnd="@dimen/small"
    android:background="@drawable/nicola"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginTop="@dimen/layout_height"
        android:layout_marginEnd="@dimen/medium"
        android:text="@string/newest_name_tv"
        android:textColor="@color/text"
        app:layout_constraintEnd_toStartOf="@+id/setting_iv"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginBottom="@dimen/medium_1"
        android:text="@string/newest_title_tv"
        android:textColor="@color/text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_tv"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/time_tv"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/medium_2"
        android:layout_marginEnd="@dimen/medium"
        android:layout_marginBottom="@dimen/medium"
        android:text="@string/newest_time_tv"
        android:textColor="@color/text"
        app:layout_constraintBottom_toBottomOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView3" />

    <ImageView
        android:id="@+id/setting_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        app:layout_constraintBottom_toBottomOf="@+id/name_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/title_tv"
        app:layout_constraintTop_toTopOf="@+id/name_tv"
        app:srcCompat="@drawable/ic_more_vert_white_24dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginBottom="@dimen/medium"
        android:text="@string/newest_title_tv_2"
        android:textColor="@color/text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_tv"
        app:layout_constraintVertical_bias="0.0" />

</android.support.constraint.ConstraintLayout>