<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/small"
    android:layout_marginTop="@dimen/small"
    android:layout_marginEnd="@dimen/small"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.0"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    android:background="@drawable/jason">


    <TextView
        android:id="@+id/trending_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginTop="@dimen/layout_height"
        android:layout_marginEnd="@dimen/medium"
        android:text="@string/trending_name_tv"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/trending_title_tv"
        android:layout_width="@dimen/layout_height_2"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginEnd="@dimen/medium"
        android:layout_marginBottom="@dimen/medium"
        android:text="@string/trending_title_tv"
        android:textColor="@color/text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trending_name_tv"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/trending_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        android:layout_marginEnd="@dimen/medium"
        android:text="@string/trending_time_tv"
        android:textColor="@color/text"
        app:layout_constraintBottom_toBottomOf="@+id/trending_title_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/trending_title_tv"
        app:layout_constraintTop_toTopOf="@+id/trending_title_tv"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/setting_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium"
        app:layout_constraintBottom_toBottomOf="@+id/trending_name_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/trending_title_tv"
        app:layout_constraintTop_toTopOf="@+id/trending_name_tv"
        app:srcCompat="@drawable/ic_more_vert_white_24dp" />

</android.support.constraint.ConstraintLayout>