<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_barLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height"
            android:fitsSystemWindows="true"
            app:toolbarId="@+id/toolbar"
            app:contentScrim="?attr/colorPrimaryDark"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <ImageView
                android:id="@+id/background_iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/nicola" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <ImageView
                    android:id="@+id/back_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_back_white_24dp" />

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/coordinatorLayout"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/name_txtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginEnd="@dimen/medium"
                android:text="@string/newest_name_tv"
                android:textColor="@color/text_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/title_txtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginEnd="@dimen/medium"
                android:text="@string/newest_title_tv"
                android:textColor="@color/text_black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name_txtview" />

            <TextView
                android:id="@+id/title_2_txtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginEnd="@dimen/medium"
                android:text="@string/newest_title_tv_2"
                android:textColor="@color/text_black"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_txtview" />

            <TextView
                android:id="@+id/time_txtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:text="@string/newest_time_tv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title_2_txtview" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="@dimen/image_size_small"
                android:layout_height="@dimen/image_size_small"
                android:layout_marginStart="@dimen/medium_2"
                app:layout_constraintBottom_toBottomOf="@+id/time_txtview"
                app:layout_constraintStart_toEndOf="@+id/time_txtview"
                app:layout_constraintTop_toTopOf="@+id/time_txtview"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/volume" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginEnd="@dimen/medium_2"
                android:text="@string/listen"
                android:textColor="@color/colorPrimaryDark"
                app:layout_constraintBottom_toBottomOf="@+id/imageView5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView5"
                app:layout_constraintTop_toTopOf="@+id/imageView5"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/language_txtview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginEnd="@dimen/medium"
                android:text="@string/language"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/time_txtview" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="@dimen/image_size_small_2"
                android:layout_height="@dimen/image_size_small_2"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginTop="@dimen/medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/language_txtview"
                app:srcCompat="@drawable/playlist" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="@dimen/image_size_small"
                android:layout_height="@dimen/image_size_small"
                android:layout_marginStart="@dimen/medium_1"
                app:layout_constraintBottom_toBottomOf="@+id/imageView6"
                app:layout_constraintStart_toEndOf="@+id/imageView6"
                app:layout_constraintTop_toTopOf="@+id/imageView6"
                app:srcCompat="@drawable/favourite" />

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="@dimen/image_size_small_2"
                android:layout_height="@dimen/image_size_small_2"
                android:layout_marginStart="@dimen/medium_1"
                app:layout_constraintBottom_toBottomOf="@+id/imageView8"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toTopOf="@+id/imageView8"
                app:srcCompat="@drawable/download" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="@dimen/image_size_small"
                android:layout_height="@dimen/image_size_small"
                android:layout_marginStart="@dimen/medium_1"
                app:layout_constraintBottom_toBottomOf="@+id/imageView9"
                app:layout_constraintStart_toEndOf="@+id/imageView9"
                app:layout_constraintTop_toTopOf="@+id/imageView9"
                app:srcCompat="@drawable/share" />

            <TextView
                android:id="@+id/description_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginTop="@dimen/medium"
                android:layout_marginEnd="@dimen/medium"
                android:text="@string/description"
                android:textColor="@color/text_black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView6" />

            <TextView
                android:id="@+id/date_txtview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium"
                android:layout_marginEnd="@dimen/medium"
                android:text="@string/date"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_txtview" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/image_size_medium"
        android:layout_height="@dimen/image_size_medium"
        android:layout_marginTop="@dimen/medium"
        android:layout_marginEnd="@dimen/medium"
        android:src="@drawable/video_play"
        app:layout_anchor="@+id/app_barLayout"
        app:layout_anchorGravity="end|bottom" />

</android.support.design.widget.CoordinatorLayout>

